--- a/services.html
+++ b/services.html
@@ -115,6 +115,24 @@
             margin: 0;
             font-size: 14px;
         }
+
+        /* Responsive Design */
+        @media (max-width: 768px) {
+            nav ul {
+                text-align: center;
+                padding: 0;
+            }
+
+            nav ul li {
+                display: block;
+                margin: 10px 0;
+            }
+
+            .services {
+                width: 95%;
+                padding: 20px;
+            }
+        }
     </style>
 </head>
 <body>
