--- a/appointment.html
+++ b/appointment.html
@@ -3,153 +3,194 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Book an Appointment</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Our Services</title>
+    <style>
+        /* General Styles */
+        body {
+            font-family: 'Arial', sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f8f9fa;
+            color: #333;
+        }
+
+        /* Header */
+        header {
+            background: #0073e6;
+            color: white;
+            text-align: center;
+            padding: 20px 0;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+        }
+
+        header h1 {
+            margin: 0;
+            font-size: 28px;
+        }
+
+        nav ul {
+            list-style: none;
+            padding: 0;
+            margin: 15px 0 0 0;
+            text-align: center;
+        }
+
+        nav ul li {
+            display: inline-block;
+            margin: 0 20px;
+        }
+
+        nav ul li a {
+            color: white;
+            text-decoration: none;
+            font-size: 16px;
+            font-weight: bold;
+            transition: color 0.3s ease;
+        }
+
+        nav ul li a:hover {
+            color: #d4e9ff;
+        }
+
+        /* Services Section */
+        .services {
+            width: 80%;
+            margin: 40px auto;
+            background: white;
+            padding: 40px;
+            border-radius: 8px;
+            box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.1);
+        }
+
+        .services h2 {
+            color: #0073e6;
+            font-size: 26px;
+            margin-bottom: 20px;
+        }
+
+        .services p {
+            font-size: 18px;
+            line-height: 1.6;
+            color: #555;
+            margin-bottom: 20px;
+        }
+
+        .services ul {
+            list-style: none;
+            padding: 0;
+            margin: 20px 0;
+        }
+
+        .services ul li {
+            font-size: 18px;
+            background: #e3f2fd;
+            padding: 15px;
+            margin: 10px 0;
+            border-radius: 5px;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+        }
+
+        .services ul li span {
+            font-weight: bold;
+            color: #0073e6;
+        }
+
+        .services ul li i {
+            font-size: 20px;
+            color: #0073e6;
+            margin-left: 10px;
+        }
+
+        /* Footer */
+        footer {
+            background: #0073e6;
+            color: white;
+            text-align: center;
+            padding: 15px 0;
+            margin-top: 40px;
+        }
+
+        footer p {
+            margin: 0;
+            font-size: 14px;
+        }
+
+        /* Responsive Design */
+        @media (max-width: 768px) {
+            nav ul {
+                padding: 0;
+            }
+
+            nav ul li {
+                display: block;
+                margin: 10px 0;
+            }
+
+            .services {
+                width: 95%;
+                padding: 20px;
+            }
+
+            .services ul li {
+                flex-direction: column;
+                text-align: center;
+                padding: 10px;
+            }
+        }
+    </style>
 </head>
 <body>
+
     <header>
-        <h1>Book an Appointment</h1>
+        <h1>Our Services</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="services.html">Services</a></li>
+                <li><a href="about.html">About Us</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="patient-portal.html">Patient Portal</a></li>
             </ul>
         </nav>
     </header>
 
-    <section class="appointment-form">
-        <h2>Schedule Your Appointment</h2>
-        <p>Fill out the form below to book an appointment with a healthcare provider.</p>
+    <section class="services">
+        <h2>Healthcare Services We Offer</h2>
+        <p>At HealthHub, we provide a wide range of healthcare services to ensure the well-being of our patients. Our services are designed to meet the needs of every patient, from routine checkups to advanced treatments.</p>
 
-        <form action="appointment.php" method="POST">
-            <input type="hidden" name="patient_id" value="1">
-
-            <label for="doctor_name">Select Doctor:</label>
-            <select name="doctor_name" required>
-                <option value="Dr. Smith">Dr. Smith</option>
-                <option value="Dr. Johnson">Dr. Johnson</option>
-            </select>
-
-            <label for="appointment_date">Choose Date:</label>
-            <input type="date" name="appointment_date" required>
-
-            <button type="submit" class="btn">Book Appointment</button>
-        </form>
+        <h3>Our Services Include:</h3>
+        <ul>
+            <li>
+                <span>Primary Care</span>
+                <i class="fas fa-stethoscope"></i>
+            </li>
+            <li>
+                <span>Pediatric Care</span>
+                <i class="fas fa-child"></i>
+            </li>
+            <li>
+                <span>Telemedicine</span>
+                <i class="fas fa-video"></i>
+            </li>
+            <li>
+                <span>Women’s Health</span>
+                <i class="fas fa-female"></i>
+            </li>
+            <li>
+                <span>Chronic Disease Management</span>
+                <i class="fas fa-heartbeat"></i>
+            </li>
+            <li>
+                <span>Health Screenings</span>
+                <i class="fas fa-clipboard-list"></i>
+            </li>
+        </ul>
     </section>
+
+    <footer>
+        <p>&copy; 2025 HealthHub. All Rights Reserved.</p>
+    </footer>
+
 </body>
 </html>
-
-<style>
-
-
-/* General Styles */
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #f4f4f4;
-    text-align: center;
-}
-
-header {
-    background: #0073e6;
-    color: white;
-    padding: 15px 0;
-}
-
-nav ul {
-    list-style: none;
-    padding: 0;
-}
-
-nav ul li {
-    display: inline;
-    margin: 0 15px;
-}
-
-nav ul li a {
-    color: white;
-    text-decoration: none;
-    font-weight: bold;
-}
-
-/* Appointment Form Styling */
-.appointment-form {
-    width: 50%;
-    margin: 30px auto;
-    background: white;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-    text-align: left;
-}
-
-.appointment-form h2 {
-    text-align: center;
-    color: #333;
-}
-
-.appointment-form p {
-    text-align: center;
-    color: #555;
-}
-
-.appointment-form label {
-    font-weight: bold;
-    display: block;
-    margin: 10px 0 5px;
-}
-
-.appointment-form select, 
-.appointment-form input[type="date"] {
-    width: 100%;
-    padding: 10px;
-    margin-bottom: 15px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    font-size: 16px;
-}
-
-.btn {
-    display: block;
-    width: 100%;
-    background: #0073e6;
-    color: white;
-    padding: 12px;
-    font-size: 18px;
-    text-align: center;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    margin-top: 10px;
-}
-
-.btn:hover {
-    background: #005bb5;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-</style>
