--- a/services.html
+++ b/services.html
@@ -32,10 +32,11 @@
             list-style: none;
             padding: 0;
             margin: 15px 0 0 0;
+            text-align: center;
         }
 
         nav ul li {
-            display: inline;
+            display: inline-block;
             margin: 0 20px;
         }
 
@@ -65,6 +66,7 @@
             color: #0073e6;
             font-size: 26px;
             margin-bottom: 20px;
+            text-align: center;
         }
 
         .services p {
@@ -72,6 +74,7 @@
             line-height: 1.6;
             color: #555;
             margin-bottom: 20px;
+            text-align: center;
         }
 
         .services ul {
@@ -119,7 +122,6 @@
         /* Responsive Design */
         @media (max-width: 768px) {
             nav ul {
-                text-align: center;
                 padding: 0;
             }
 
@@ -131,6 +133,12 @@
             .services {
                 width: 95%;
                 padding: 20px;
+            }
+
+            .services ul li {
+                flex-direction: column;
+                text-align: center;
+                padding: 10px;
             }
         }
     </style>
