--- a/about.html
+++ b/about.html
@@ -19,30 +19,32 @@
             background: #0073e6;
             color: white;
             text-align: center;
-            padding: 20px 0;
+            padding: 15px;
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
         }
 
         header h1 {
             margin: 0;
-            font-size: 28px;
+            font-size: 24px;
         }
 
         nav ul {
             list-style: none;
             padding: 0;
-            margin: 15px 0 0 0;
+            margin: 10px 0 0 0;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
         }
 
         nav ul li {
-            display: inline;
-            margin: 0 20px;
+            margin: 5px 15px;
         }
 
         nav ul li a {
             color: white;
             text-decoration: none;
-            font-size: 16px;
+            font-size: 14px;
             font-weight: bold;
             transition: color 0.3s ease;
         }
@@ -53,10 +55,11 @@
 
         /* About Section */
         .about {
-            width: 70%;
-            margin: 40px auto;
+            max-width: 90%;
+            width: 600px;
+            margin: 30px auto;
             background: white;
-            padding: 30px;
+            padding: 20px;
             border-radius: 8px;
             box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.1);
             text-align: center;
@@ -64,21 +67,21 @@
 
         .about h2 {
             color: #0073e6;
-            font-size: 26px;
-            margin-bottom: 15px;
+            font-size: 22px;
+            margin-bottom: 10px;
         }
 
         .about p {
-            font-size: 18px;
+            font-size: 16px;
             line-height: 1.6;
             color: #555;
-            margin-bottom: 20px;
+            margin-bottom: 15px;
         }
 
         .about h3 {
             color: #0073e6;
-            font-size: 22px;
-            margin-top: 25px;
+            font-size: 20px;
+            margin-top: 20px;
         }
 
         .about ul {
@@ -87,9 +90,9 @@
         }
 
         .about ul li {
-            font-size: 18px;
+            font-size: 16px;
             background: #e3f2fd;
-            padding: 10px;
+            padding: 8px;
             margin: 5px 0;
             border-radius: 5px;
         }
@@ -99,13 +102,20 @@
             background: #0073e6;
             color: white;
             text-align: center;
-            padding: 15px 0;
-            margin-top: 40px;
+            padding: 10px;
+            margin-top: 30px;
+            font-size: 12px;
         }
 
-        footer p {
-            margin: 0;
-            font-size: 14px;
+        @media (max-width: 600px) {
+            nav ul {
+                flex-direction: column;
+                padding: 0;
+            }
+            
+            nav ul li {
+                margin: 5px 0;
+            }
         }
     </style>
 </head>
