--- a/index.html
+++ b/index.html
@@ -1,19 +1,20 @@
-<!DOCTYPE html> 
-<html lang="en"> 
-<head>     
-    <meta charset="UTF-8">     
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">     
-    <title>Healthcare Services</title>     
-    <style>         
-        /* General Styles */         
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Healthcare Services</title>
+    <style>
+        /* General Styles */
         body {
             font-family: 'Arial', sans-serif;
             margin: 0;
             padding: 0;
             background-color: #f8f9fa;
             color: #333;
-        }         
-        /* Header */         
+        }
+
+        /* Header */
         header {
             background: #0073e6;
             color: white;
@@ -21,52 +22,59 @@
             padding: 20px 0;
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
             position: relative;
-        }         
+        }
+
         .logo {
             position: absolute;
             left: 20px;
-            top: 20px;
-            font-family: 'Arial', sans-serif;
+            top: 50%;
+            transform: translateY(-50%);
             font-size: 24px;
             font-weight: bold;
             color: #fff;
             text-transform: uppercase;
-        }         
+        }
+
         header h1 {
             margin: 0;
             font-size: 28px;
-        }         
+        }
+
         nav ul {
             list-style: none;
             padding: 0;
             margin: 15px 0 0 0;
-        }         
+        }
+
         nav ul li {
             display: inline;
             margin: 0 20px;
-        }         
+        }
+
         nav ul li a {
             color: white;
             text-decoration: none;
             font-size: 16px;
             font-weight: bold;
             transition: color 0.3s ease;
-        }         
+        }
+
         nav ul li a:hover {
             color: #d4e9ff;
-        }         
-        /* Hero Section */         
+        }
+
+        /* Hero Section */
         .hero {
-            background-image: url('https://images.unsplash.com/photo-1643297654526-d78132dfd25d?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTB8fG51cnNlJTIwZG9pbmclMjBoZXIlMjBqb2J8ZW58MHx8MHx8fDA%3D');
+            background-image: url('https://images.unsplash.com/photo-1643297654526-d78132dfd25d?w=500&auto=format&fit=crop&q=60');
             background-size: cover;
             background-position: center;
             color: white;
             text-align: center;
             padding: 80px 20px;
-            margin-bottom: 40px;
             height: 400px;
             position: relative;
-        }         
+        }
+
         .hero::before {
             content: '';
             position: absolute;
@@ -76,22 +84,25 @@
             height: 100%;
             background: rgba(0, 0, 0, 0.5);
             z-index: 1;
-        }         
+        }
+
         .hero h2, .hero p, .hero .btn {
             position: relative;
             z-index: 2;
             color: white;
-        }         
+        }
+
         .hero h2 {
             font-size: 36px;
             margin-bottom: 10px;
-        }         
+        }
+
         .hero p {
             font-size: 18px;
             line-height: 1.6;
-            color: white;
             margin-bottom: 20px;
-        }         
+        }
+
         .hero .btn {
             padding: 12px 25px;
             background: #0073e6;
@@ -101,11 +112,13 @@
             border-radius: 5px;
             text-align: center;
             transition: background-color 0.3s ease;
-        }         
+        }
+
         .hero .btn:hover {
             background: #005bb5;
-        }         
-        /* Services Section */         
+        }
+
+        /* Services Section */
         section {
             width: 80%;
             margin: 0 auto;
@@ -114,93 +127,109 @@
             border-radius: 8px;
             box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.1);
             text-align: center;
-        }         
+        }
+
         section h2 {
             color: #0073e6;
             font-size: 26px;
             margin-bottom: 20px;
-        }         
+        }
+
         section p {
             font-size: 18px;
             line-height: 1.6;
-            color:black;
             margin-bottom: 20px;
-        }         
-        /* Footer */         
+        }
+
+        /* Footer */
         footer {
             background: #0073e6;
             color: white;
             text-align: center;
             padding: 15px 0;
             margin-top: 40px;
-        }         
+        }
+
         footer p {
             margin: 0;
             font-size: 14px;
-        }         
+        }
+
         /* Responsive Design */
         @media (max-width: 768px) {
             .logo {
                 position: relative;
-                text-align: center;
                 display: block;
-                margin: 10px 0;
+                text-align: center;
+                transform: none;
+                margin-bottom: 10px;
             }
+
             header h1 {
                 font-size: 22px;
+                margin-top: 5px;
             }
+
             nav ul {
                 padding: 0;
                 margin: 10px 0;
                 text-align: center;
             }
+
             nav ul li {
                 display: block;
                 margin: 10px 0;
             }
+
             .hero {
                 height: 300px;
                 padding: 60px 20px;
             }
+
             .hero h2 {
                 font-size: 28px;
             }
+
             .hero p {
                 font-size: 16px;
             }
+
             section {
                 width: 90%;
                 padding: 30px;
             }
         }
     </style>
-</head> 
-<body>     
-    <header>         
-        <div class="logo">HealthHub</div> 
-        <h1>Welcome to Our Healthcare Services</h1>         
-        <nav>             
-            <ul>                 
-                <li><a href="index.html">Home</a></li>                 
-                <li><a href="about.html">About Us</a></li>                 
-                <li><a href="services.html">Services</a></li>                 
-                <li><a href="contact.html">Contact</a></li>                 
-                <li><a href="patient-portal.html">Patient Portal</a></li>             
-            </ul>         
-        </nav>     
-    </header>     
-    <section class="hero">         
-        <h2>Quality Healthcare, Anytime, Anywhere</h2>         
-        <p>Book an appointment, consult with doctors online, and access your medical records securely.</p>         
-        <a href="appointment.html" class="btn">Book an Appointment</a>     
-    </section>     
-    <section>         
-        <h2>Our Healthcare Services</h2>         
-        <p>We offer a wide range of medical services that ensure the health and well-being of you and your family.</p>         
-        <a href="services.html" class="btn">Learn More About Our Services</a>     
-    </section>     
-    <footer>         
-        <p>&copy; 2025 HealthHub. All Rights Reserved.</p>     
-    </footer>  
-</body> 
+</head>
+<body>
+    <header>
+        <div class="logo">HealthHub</div>
+        <h1>Welcome to Our Healthcare Services</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="services.html">Services</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="patient-portal.html">Patient Portal</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <section class="hero">
+        <h2>Quality Healthcare, Anytime, Anywhere</h2>
+        <p>Book an appointment, consult with doctors online, and access your medical records securely.</p>
+        <a href="appointment.html" class="btn">Book an Appointment</a>
+    </section>
+
+    <section>
+        <h2>Our Healthcare Services</h2>
+        <p>We offer a wide range of medical services that ensure the health and well-being of you and your family.</p>
+        <a href="services.html" class="btn">Learn More About Our Services</a>
+    </section>
+
+    <footer>
+        <p>&copy; 2025 HealthHub. All Rights Reserved.</p>
+    </footer>
+</body>
 </html>
