--- a/index.html
+++ b/index.html
@@ -14,16 +14,7 @@
             color: #333;
         }
 
-        /* Header */
-        header {
-            background: #0073e6;
-            color: white;
-            text-align: center;
-            padding: 20px 0;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-            position: relative;
-        }
-
+        /* Logo (Default for Desktop) */
         .logo {
             position: absolute;
             left: 20px;
@@ -33,6 +24,16 @@
             font-weight: bold;
             color: #fff;
             text-transform: uppercase;
+        }
+
+        /* Header */
+        header {
+            background: #0073e6;
+            color: white;
+            text-align: center;
+            padding: 20px 0;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+            position: relative;
         }
 
         header h1 {
@@ -157,12 +158,18 @@
 
         /* Responsive Design */
         @media (max-width: 768px) {
+            /* Move logo above header */
             .logo {
                 position: relative;
                 display: block;
                 text-align: center;
-                transform: none;
-                margin-bottom: 10px;
+                margin: 20px auto;
+                font-size: 26px;
+                color: #0073e6;
+            }
+
+            header {
+                padding-top: 10px;
             }
 
             header h1 {
@@ -202,8 +209,10 @@
     </style>
 </head>
 <body>
+
+    <div class="logo">HealthHub</div> <!-- Logo moved outside header -->
+    
     <header>
-        <div class="logo">HealthHub</div>
         <h1>Welcome to Our Healthcare Services</h1>
         <nav>
             <ul>
@@ -231,5 +240,6 @@
     <footer>
         <p>&copy; 2025 HealthHub. All Rights Reserved.</p>
     </footer>
+
 </body>
 </html>
