--- a/index.html
+++ b/index.html
@@ -14,19 +14,6 @@
             color: #333;
         }
 
-        /* Logo Default (Desktop) */
-        .logo {
-            position: absolute;
-            left: 14px;
-            top: 50%;
-            transform: translateY(-50%);
-            font-size: 24px;
-            font-weight: bold;
-            color: #fff;
-            text-transform: uppercase;
-            white-space: nowrap;
-        }
-
         /* Header */
         header {
             background: #0073e6;
@@ -34,12 +21,26 @@
             text-align: center;
             padding: 20px 0;
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-            position: relative;
+            position: relative; /* Ensure the logo stays inside the header */
         }
 
         header h1 {
             margin: 0;
             font-size: 28px;
+        }
+
+        /* Logo Default (Desktop) */
+        .logo {
+            position: absolute;
+            left: 20px;
+            top: 50%;
+            transform: translateY(-50%);
+            font-size: 24px;
+            font-weight: bold;
+            color: #fff;
+            text-transform: uppercase;
+            white-space: nowrap;
+            z-index: 10; /* Ensure it's above other elements */
         }
 
         nav ul {
@@ -168,7 +169,7 @@
                 position: relative;
                 display: block;
                 text-align: center;
-                margin: 20px auto;
+                margin: 10px auto;
                 font-size: 28px;
                 color: #0073e6;
                 font-weight: bold;
@@ -221,9 +222,8 @@
 </head>
 <body>
 
-    <div class="logo">HealthHub</div> <!-- Logo moved above header -->
-    
     <header>
+        <div class="logo">HealthHub</div> <!-- Logo inside header -->
         <h1>Welcome to Our Healthcare Services</h1>
         <nav>
             <ul>
